--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -38,32 +38,65 @@
         <div id='{{tabname.key+"_body"}}' class="panel-body row">
           <ng-container *ngFor="let configparam of configTabsForm.get(tabname.key).controls | keyvalue : returnZero; first as isFirst; index as index">
             <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
-            <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
-              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
-              <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
-                <!-- here check if  {{tabname.key}} its info so the input is readonly -->
-                <!-- here check if  {{configparam.key}} contains password, file, etc..-->
+            <!-- {{log(typeConfig(configparam.value.value))}} -->
+            <!-- {{typeConfig(configparam.value.value)}} -->
 
-                <ng-container *ngIf="isObject(configparam.value); then ObjectBlock; else noObjectBlock"></ng-container>
-                <ng-template #ObjectBlock>
-                  <!-- {{configparam.value.value | json}} -->
-                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
-                  <!-- [class.is-invalid]="configTabsForm.get(configparam.key).invalid && configTabsForm.get(configparam.key).touched" -->
-                  name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
-                  placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
-                  formControlName="{{configparam.key}}">
-                  <small class="text-danger" [class.d-none]="configparam.value.valid || configparam.value.untouched">{{configparam.key}} is required</small>
-                </ng-template>
-                <ng-template #noObjectBlock>
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'string'">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+                <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
                   <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
                   [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
                   name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
                   placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
                   formControlName="{{configparam.key}}">
-                  <small class="text-danger" [class.d-none]="configparam.value.valid || configparam.value.untouched">{{configparam.key}} is required</small>
-                </ng-template>
+                </div>
               </div>
-            </div>
+            </ng-container>
+
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'number' ">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+                <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
+                  name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
+                  placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
+                  formControlName="{{configparam.key}}">
+                </div>
+              </div>
+            </ng-container>
+
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'boolean' ">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-check col-md-3">
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
+                  name={{configparam.key}} type="checkbox"
+                  placeholder={{configparam.key}} class="form-check-input input-md" value={{configparam.value}}
+                  formControlName="{{configparam.key}}">
+                  <label class="form-check-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                </div>
+              </div>
+            </ng-container>
+
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'object' ">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+                <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
+                  name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
+                  placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
+                  formControlName="{{configparam.key}}">
+                </div>
+              </div>
+            </ng-container>
+
+
+
+            <small class="text-danger" [class.d-none]="configparam.value.valid || configparam.value.untouched">{{configparam.key}} is required</small>
+
           </ng-container>
 
         </div>
@@ -76,32 +109,65 @@
 
           <ng-container *ngFor="let configparam of configTabsForm.get(tabname.key).controls | keyvalue : returnZero; first as isFirst; index as index">
             <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
-            <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
-              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
-              <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
-                <!-- here check if  {{tabname.key}} its info so the input is readonly -->
-                <!-- here check if  {{configparam.key}} contains password, file, etc..-->
+            <!-- {{log(typeConfig(configparam.value.value))}} -->
+            <!-- {{typeConfig(configparam.value.value)}} -->
 
-                <ng-container *ngIf="isObject(configparam.value); then ObjectBlock; else noObjectBlock"></ng-container>
-                <ng-template #ObjectBlock>
-                  <!-- {{configparam.value.value | json}} -->
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'string'">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+                <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
                   <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
                   [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
                   name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
                   placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
                   formControlName="{{configparam.key}}">
-                  <small class="text-danger" [class.d-none]="configparam.value.valid || configparam.value.untouched">{{configparam.key}} is required</small>
-                </ng-template>
-                <ng-template #noObjectBlock>
-                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
-                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
-                  name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
-                  placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
-                  formControlName="{{configparam.key}}">
-                  <small class="text-danger" [class.d-none]="configparam.value.valid || configparam.value.untouched">{{configparam.key}} is required</small>
-                </ng-template>
+                </div>
               </div>
-            </div>
+            </ng-container>
+
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'number' ">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+                <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
+                  name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
+                  placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
+                  formControlName="{{configparam.key}}">
+                </div>
+              </div>
+            </ng-container>
+
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'boolean' ">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-check col-md-3">
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
+                  name={{configparam.key}} type="checkbox"
+                  placeholder={{configparam.key}} class="form-check-input input-md" value={{configparam.value}}
+                  formControlName="{{configparam.key}}">
+                  <label class="form-check-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                </div>
+              </div>
+            </ng-container>
+
+            <ng-container *ngIf="typeConfig(configparam.value.value) == 'object' ">
+              <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+                <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
+                <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                  <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                  [class.is-invalid]="configparam.value.invalid && configparam.value.touched"
+                  name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
+                  placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
+                  formControlName="{{configparam.key}}">
+                </div>
+              </div>
+            </ng-container>
+
+
+
+            <small class="text-danger" [class.d-none]="configparam.value.valid || configparam.value.untouched">{{configparam.key}} is required</small>
+
           </ng-container>
 
         </div>
@@ -143,7 +209,7 @@
 </div>
 
 <!-- Example Template Driven Form -->
-<div *ngIf="!enableTutorial">
+<div *ngIf="enableTutorial">
 <hr />
 <div class="container-fluid">
   <h1>Test Template Driven Form:</h1>
