--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -220,8 +220,21 @@
 <div id="buttons" class="float-right" style="margin-bottom: 20px; margin-right: 20px; float: right;">
 <!-- <div id="buttons" body class="panel-body"> -->
   <div class="col-md-12">
-    <button (click)="saveConfigTabs()" [disabled]='!configTabsForm.valid' id="SaveConfig"
-            class="btn btn-primary ml-2" type="submit">Save</button>
+    <button [nbSpinner]="savingPOST" [disabled]='!configTabsForm.valid || savingPOST' 
+      nbSpinnerStatus="success" nbButton status="info" (click)="saveConfigTabs()">
+      Save
+    </button>
+
+    <button (click)="saveConfigTabs()" [disabled]='!configTabsForm.valid || savingPOST' id="SaveConfig"
+    class="btn btn-primary ml-2" type="submit">
+    <ng-container *ngIf="savingPOST; else elseTemplate">
+      Saving...
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    </ng-container>
+    <ng-template #elseTemplate>
+      Save
+    </ng-template>
+    </button>
     <button (click)="restartDevice()" [disabled]='!configTabsForm.valid' id="Restart"
             class="btn btn-success ml-2" type="submit">Restart device</button>
 
